<?xml version="1.0"?>
<package>
  <name>sandbox</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="j.j.m.lunenburg@tue.nl">Janno Lunenburg</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
